--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+2-4 [台湾外交突破！ 在南美圭亚那设立“台湾办公室”](/articles/rfa/1046500.md)
+
+2-4 [哈萨克人权组织访美   继续披露新疆教育营内幕](/articles/rfa/1046501.md)
+
+2-4 [中共文件强调红色基因    少年儿童须跟共产党走](/articles/rfa/1046502.md)
+
 2-4 [博明提醒拜登政府不要落入与中国谈判的陷阱](/articles/rfa/1046503.md)
 
 2-4 [学者：缅甸政变或得北京默许 中缅各取所需？](/articles/rfa/1046504.md)
@@ -594,10 +600,4 @@
 1-5 [十二港人家属委託律师被秋后算帐：卢思位任全牛遭取消执业资格](/articles/rfa/1046798.md)
 
 1-5 [中国三大电讯商被纽交所除牌 石油公司料步后尘](/articles/rfa/1046799.md)
-
-1-5 [流亡藏人预选司政、议员 盼境内藏人也有投票权](/articles/rfa/1046800.md)
-
-1-4 [中国新国防法生效  对台扩大无烟硝战](/articles/rfa/1046801.md)
-
-1-4 [西藏解放军最新装备 : 军官有权启动士兵自毁装置](/articles/rfa/1046802.md)
 
