--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-4 [北京冬奥倒数一年 全球抵制声浪再起](/articles/dw/1044082.md)
+
 2-4 [美关切新疆再教育营妇女遭系统性轮暴指控](/articles/dw/1044083.md)
 
 2-4 [联合国向缅军施压 安理会声明难产](/articles/dw/1044084.md)
@@ -598,6 +600,4 @@
 1-19 [世卫独立小组：世卫及北京未及时应对疫情](/articles/dw/1044380.md)
 
 1-19 [媒体: 武汉封城的前三天纪实](/articles/dw/1044381.md)
-
-1-19 [数千中美洲移民与危地马拉警方发生冲突](/articles/dw/1044382.md)
 
