--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-4 [大象公会｜为什么人人都爱「原声加字幕」](/articles/cdt/386248.md)
+
 2-4 [鱼眼观察｜任正非道歉了，但他们不接受](/articles/cdt/386249.md)
 
 2-4 [程益中｜刻意抵赖病毒起源地，既愚昧又卑劣](/articles/cdt/386251.md)
@@ -598,6 +600,4 @@
 1-5 [连续清醒派 | 工作60天，一个月工作380小时，她用白骨给拼多多打江山](/articles/cdt/387462.md)
 
 1-5 [豹变｜为拼多多守边疆的女孩，凌晨倒在了-20℃的冬夜](/articles/cdt/387464.md)
-
-1-4 [新浪科技｜拼多多为知乎账号“管控不严”道歉：系供应商员工发布](/articles/cdt/387468.md)
 
