--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-4 [台湾外交突破 圭亚那设“台湾办公室”](/articles/dw/1044080.md)
+
+2-4 [拜登周四访国务院：旨在放出何种信号？](/articles/dw/1044081.md)
+
 2-4 [北京冬奥倒数一年 全球抵制声浪再起](/articles/dw/1044082.md)
 
 2-4 [美关切新疆再教育营妇女遭系统性轮暴指控](/articles/dw/1044083.md)
@@ -596,8 +600,4 @@
 1-19 [文在寅呼吁拜登重启美朝对话](/articles/dw/1044378.md)
 
 1-19 [荣耀辉煌？ 德皇威廉时代的遗产](/articles/dw/1044379.md)
-
-1-19 [世卫独立小组：世卫及北京未及时应对疫情](/articles/dw/1044380.md)
-
-1-19 [媒体: 武汉封城的前三天纪实](/articles/dw/1044381.md)
 
