--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-4 [前佛罗里达大学教授被控欺诈联邦赠款及隐瞒受中国政府支持背景](/articles/voa/1043203.md)
+
+2-4 [中国经济规模将超越美国? 学者：与美国争霸为时过早](/articles/voa/1043204.md)
+
 2-4 [英国产业抱怨脱欧利少弊多政府坚称会改善](/articles/voa/1043205.md)
 
 2-4 [拜登星期四发表讲话 为外交政策定调](/articles/voa/1043206.md)
@@ -596,8 +600,4 @@
 1-24 [世卫疑与北京关系暧昧 武汉病毒溯源深不可测？](/articles/voa/1043501.md)
 
 1-24 [台海局势紧张 美航母群驶入南中国海](/articles/voa/1043502.md)
-
-1-24 [中国推动高层会晤以期缓和美中紧张关系](/articles/voa/1043503.md)
-
-1-24 [拜登政府即将出台更多气变政策 敦促中国加大减排目标](/articles/voa/1043504.md)
 
