--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-4 [国会研究报告:中国已是“地区霸权”并力争做“世界霸主”](/articles/voa/1043201.md)
+
 2-4 [英国吊销中共央媒在英广播执照](/articles/voa/1043202.md)
 
 2-4 [前佛罗里达大学教授被控欺诈联邦赠款及隐瞒受中国政府支持背景](/articles/voa/1043203.md)
@@ -598,6 +600,4 @@
 1-25 [外媒被中国排挤出境台湾成为报导中国的窗口](/articles/voa/1043499.md)
 
 1-24 [美国新任防长上任伊始即与日韩防长通话](/articles/voa/1043500.md)
-
-1-24 [世卫疑与北京关系暧昧 武汉病毒溯源深不可测？](/articles/voa/1043501.md)
 
