--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-4 [用香港国安法罢免台湾议员？台湾舆论大哗](/articles/rfa/1046498.md)
+
 2-4 [余下任期不到两年 港特首急推多项争议法案为哪般？](/articles/rfa/1046499.md)
 
 2-4 [台湾外交突破！ 在南美圭亚那设立“台湾办公室”](/articles/rfa/1046500.md)
@@ -598,6 +600,4 @@
 1-5 [“全球民主歌声2020”线上举行  回顾香港抗争历程](/articles/rfa/1046796.md)
 
 1-5 [忧遭中国报复  瑞典爱立信声援华为](/articles/rfa/1046797.md)
-
-1-5 [十二港人家属委託律师被秋后算帐：卢思位任全牛遭取消执业资格](/articles/rfa/1046798.md)
 
