--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-5 [医学期刊编辑：政府处理疫情不当 造成社会谋杀 – 法国国际广播电台 - RFI](/articles/rfi/1035282.md)
+
+2-5 [疫情重创能源需求 壳牌石油2020年亏损6054亿元 – 法国国际广播电台 - RFI](/articles/rfi/1035283.md)
+
 2-4 [新疆拘留营传性侵妇女 欧洲议员促欧盟强力谴责](/articles/rfi/1035284.md)
 
 2-4 [法气候“世纪诉讼”宣判：政府减排不利为错](/articles/rfi/1035285.md)
@@ -596,8 +600,4 @@
 1-31 [今日起BNO护照作废乘客航空公司须检视有效证件](/articles/rfi/1035580.md)
 
 1-31 [英保守党前党魁提醒政府不应忽视中方对BNO的针对](/articles/rfi/1035581.md)
-
-1-31 [郭飞雄上海探患病妻子遭扣留目前失联](/articles/rfi/1035582.md)
-
-1-31 [拜登1.9兆美元纾困案 共和党议员：浪费公帑 – 法国国际广播电台 - RFI](/articles/rfi/1035583.md)
 
