--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-5 [自由之家特别报告：中共海外镇压运动规模最大，波及350万人](/articles/voa/1043194.md)
+
+2-5 [白宫表示将全力支持美国太空军](/articles/voa/1043195.md)
+
 2-5 [世卫专家组测试北京底线 要求探访敏感区蝙蝠洞](/articles/voa/1043196.md)
 
 2-5 [美国对新疆拘禁营女性遭受性侵的报道“深感不安”](/articles/voa/1043197.md)
@@ -596,8 +600,4 @@
 1-25 [上任伊始 拜登政府与亚太、欧洲盟国通话谋求协调对华政策](/articles/voa/1043492.md)
 
 1-25 [美国总统拜登周一将正式恢复对一些国家的旅行限制](/articles/voa/1043493.md)
-
-1-25 [共和党两位重要参议员在特朗普弹劾案审判上意见相左](/articles/voa/1043494.md)
-
-1-25 [拜登总统将宣布“买美国货”政策；将参加英国主办的G7峰会](/articles/voa/1043495.md)
 
