--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-5 [拜登总统外交政策讲话节选](/articles/voa/1043192.md)
+
 2-5 [港大学生会国安法下续办鱼蛋革命5周年放映会 盼认识本土历史](/articles/voa/1043193.md)
 
 2-5 [自由之家特别报告：中共海外镇压运动规模最大，波及350万人](/articles/voa/1043194.md)
@@ -598,6 +600,4 @@
 1-25 [加拿大反对党敦促特鲁多政府认定中国对维族人犯下种族灭绝罪](/articles/voa/1043490.md)
 
 1-25 [澳大利亚外长：将积极与拜登政府合作共同面对中国和其他各项挑战](/articles/voa/1043491.md)
-
-1-25 [上任伊始 拜登政府与亚太、欧洲盟国通话谋求协调对华政策](/articles/voa/1043492.md)
 
