--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-5 [美国总统拜登周四首谈外交政策定大调少细节](/articles/rfi/1035277.md)
+
 2-5 [疫情笼罩 澳网主席：绝对有信心下周登场 – 法国国际广播电台 - RFI](/articles/rfi/1035278.md)
 
 2-5 [2020年Podcast节目成长近3倍 – 法国国际广播电台 - RFI](/articles/rfi/1035279.md)
@@ -598,6 +600,4 @@
 1-31 [日本首次发生变异新冠病毒聚集性感染](/articles/rfi/1035575.md)
 
 1-31 [桃医群聚感染延烧第二家医院护理师全家六口确诊婆婆死亡](/articles/rfi/1035576.md)
-
-1-31 [「隔离」7天的电影节 瑞典护理师前进小岛独观影 – 法国国际广播电台 - RFI](/articles/rfi/1035577.md)
 
