--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-5 [世卫专家在武毒所调查  实验室泄露说又成焦点](/articles/rfa/1046493.md)
+
+2-5 [美报告：意见领袖与公众就对华政策有分歧](/articles/rfa/1046494.md)
+
 2-5 [英国撤销中国环球电视网在英播放执照](/articles/rfa/1046495.md)
 
 2-5 [安全港计划第一步  加拿大对香港人开放新工签申请](/articles/rfa/1046496.md)
@@ -596,8 +600,4 @@
 1-5 [“实体清单”又如何？大疆持续在美出售无人机](/articles/rfa/1046791.md)
 
 1-5 [中共公布新党员条例     蔡霞:加强9000万党员围着一个人转](/articles/rfa/1046792.md)
-
-1-5 [高智晟姐姐绝望自杀   生前活在恐惧中](/articles/rfa/1046793.md)
-
-1-5 [病毒起源仍众说纷纭     世卫调查如大海捞针](/articles/rfa/1046794.md)
 
