--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-5 [工业互联网如何重新定义“中国制造”](/articles/ft/1046114.md)
+
 2-4 [如何全面评判特朗普的对华遏制战略？](/articles/ft/1046115.md)
 
 2-4 [每周时事分析：“更长的电报”与中国应给予世界的承诺](/articles/ft/1046116.md)
@@ -598,6 +600,4 @@
 12-30 [2020年：我们学到些什么教训？](/articles/ft/1046412.md)
 
 12-30 [FT社评：人类必须向超级细菌宣战](/articles/ft/1046413.md)
-
-12-30 [疫苗有望推动欧元区经济2021年创纪录增长](/articles/ft/1046414.md)
 
