--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-5 [拜登首访国务院 左打中国右批俄罗斯](/articles/dw/1044066.md)
+
+2-5 [联合国要求缅军释放昂山素季 美考虑施行制裁](/articles/dw/1044067.md)
+
 2-5 [中国要求「纠正错误」圭亚那终止与台协议](/articles/dw/1044068.md)
 
 2-5 [伊莎贝尔·贝隆90岁了](/articles/dw/1044069.md)
@@ -596,8 +600,4 @@
 1-20 [德语媒体：强扭的瓜不甜](/articles/dw/1044364.md)
 
 1-19 [布林肯：美国将 “战胜 “崛起的中国](/articles/dw/1044365.md)
-
-1-19 [前男友：她偷走佩洛西的电脑，还想卖给俄罗斯](/articles/dw/1044366.md)
-
-1-19 [美国新冠死亡数破40万 拜登拒绝特朗普取消旅行禁令](/articles/dw/1044367.md)
 
