--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-5 [小米起诉美国防部与财政部：中美关系新走向的一个试金石](/articles/ft/1046108.md)
+
 2-5 [海口：16个梦幻天团地标组合](/articles/ft/1046109.md)
 
 2-5 [科技股的高估值意味着什么？](/articles/ft/1046110.md)
@@ -598,6 +600,4 @@
 12-31 [2020，这是人们说起就沉默的一年——2020年公关大事件和趋势回顾](/articles/ft/1046406.md)
 
 12-31 [布哈林启发邓小平，邓小平改变中国](/articles/ft/1046407.md)
-
-12-31 [每周时事分析：中欧对拜登政府可信度已有共同的判断](/articles/ft/1046408.md)
 
