--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-5 [威权、爱国主义和14亿人：中国对新冠的一场“人民战争”](/articles/nyt/1047205.md)
+
 2-5 [缅甸民盟的“昂山素季造神运动”和垮台](/articles/nyt/1047206.md)
 
 2-5 [一个捐精的男人、他的几百个孩子和一个问题：为什么？](/articles/nyt/1047207.md)
@@ -598,6 +600,4 @@
 11-30 [伊朗首席核科学家为何被暗杀？](/articles/nyt/1047503.md)
 
 11-30 [耐克和可口可乐寻求削弱新疆强迫劳动法案](/articles/nyt/1047504.md)
-
-11-30 [华裔企业家谢家华意外去世，曾创办鞋类电商Zappos](/articles/nyt/1047505.md)
 
