--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-5 [揭露教育营性侵被指造谣   教育营亲历者挺身而出驳斥中国官媒](/articles/rfa/1046488.md)
+
 2-5 [拜登首次外交演说： 联合盟友应对中国挑战](/articles/rfa/1046489.md)
 
 2-5 [人人影视字幕组成员被抓   网友叹“盗火者”受难](/articles/rfa/1046490.md)
@@ -598,6 +600,4 @@
 1-6 [圆圆寻亲？ 台学者：罔顾史实的政治宣传](/articles/rfa/1046786.md)
 
 1-5 [“拼多多”女员工猝死    生前批评中国“资本主义文革”](/articles/rfa/1046787.md)
-
-1-5 [中国东北多地爆发疫情     核酸检测准绳受质疑](/articles/rfa/1046788.md)
 
