--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-5 [央视新闻｜最新！“劣迹艺人”可被永久抵制，复出需报批](/articles/cdt/386199.md)
+
+2-5 [德国之声 | 长平观察：踏入历史，修复过往](/articles/cdt/386200.md)
+
 2-5 [【网络民议】习总书记“精准扶贫”效果超标？网民：请来我家扶贫](/articles/cdt/386210.md)
 
 2-5 [Epoch故事小馆｜三百多块的离婚代抢，她觉得「真值」](/articles/cdt/386211.md)
@@ -596,8 +600,4 @@
 1-5 [drpei｜哺乳妈妈吃中药，宝宝核酸为什么转阴了呢？](/articles/cdt/387423.md)
 
 1-5 [第一财经杂志｜23岁员工猝死背后，是拼多多的“开疆拓土”](/articles/cdt/387426.md)
-
-1-5 [栖灵｜山西、陕西：雷霆出击冒着严寒没收百姓煤炭 用水泥封住村民火炕](/articles/cdt/387428.md)
-
-1-5 [【CDTV】一席｜罗翔：性侵犯罪中的同意问题](/articles/cdt/387445.md)
 
