--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+2-5 [阿尔茨海默症可以预测吗？写作测试也许提供了答案](/articles/nyt/1047203.md)
+
+2-5 [纽约云端豪宅住户的烦恼：漏水、噪音，电梯停运](/articles/nyt/1047204.md)
+
 2-5 [威权、爱国主义和14亿人：中国对新冠的一场“人民战争”](/articles/nyt/1047205.md)
 
 2-5 [缅甸民盟的“昂山素季造神运动”和垮台](/articles/nyt/1047206.md)
@@ -596,8 +600,4 @@
 12-1 [澳大利亚谴责中国外交官挑衅推文，两国敌对情绪升级](/articles/nyt/1047501.md)
 
 11-30 [香港的司法体系还能保持独立多久？](/articles/nyt/1047502.md)
-
-11-30 [伊朗首席核科学家为何被暗杀？](/articles/nyt/1047503.md)
-
-11-30 [耐克和可口可乐寻求削弱新疆强迫劳动法案](/articles/nyt/1047504.md)
 
