--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-5 [圭亚那一夕变脸 片面终止“台湾办公室”协议](/articles/rfa/1046487.md)
+
 2-5 [揭露教育营性侵被指造谣   教育营亲历者挺身而出驳斥中国官媒](/articles/rfa/1046488.md)
 
 2-5 [拜登首次外交演说： 联合盟友应对中国挑战](/articles/rfa/1046489.md)
@@ -598,6 +600,4 @@
 1-6 [支持法轮功遭迫害?   一瑞典公民面临被波兰遣返中国](/articles/rfa/1046785.md)
 
 1-6 [圆圆寻亲？ 台学者：罔顾史实的政治宣传](/articles/rfa/1046786.md)
-
-1-5 [“拼多多”女员工猝死    生前批评中国“资本主义文革”](/articles/rfa/1046787.md)
 
