--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-5 [台美半导体供应链会议 倡议加入经济合作组织](/articles/rfa/1046485.md)
+
+2-5 [国安教育由娃娃抓起 全港中、小学设立国安监察小组](/articles/rfa/1046486.md)
+
 2-5 [圭亚那一夕变脸 片面终止“台湾办公室”协议](/articles/rfa/1046487.md)
 
 2-5 [揭露教育营性侵被指造谣   教育营亲历者挺身而出驳斥中国官媒](/articles/rfa/1046488.md)
@@ -596,8 +600,4 @@
 1-6 [济南拟立新规    遗弃狗将被罚两千](/articles/rfa/1046783.md)
 
 1-6 [专访香港“连侬画家”奥托：用手绘画支援香港抗争](/articles/rfa/1046784.md)
-
-1-6 [支持法轮功遭迫害?   一瑞典公民面临被波兰遣返中国](/articles/rfa/1046785.md)
-
-1-6 [圆圆寻亲？ 台学者：罔顾史实的政治宣传](/articles/rfa/1046786.md)
 
