--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-5 [【网络民议】BBC新疆性侵报道引发全球关注，中国网民晦涩地讨论新疆](/articles/cdt/386196.md)
+
 2-5 [呦呦鹿鸣｜谁是“困难群众” ？](/articles/cdt/386197.md)
 
 2-5 [知灼 | 慰问困难户引来围观，其实还是老问题](/articles/cdt/386198.md)
@@ -598,6 +600,4 @@
 1-6 [香港01 | 至少52泛民被捕  疑与民主派初选有关  涉颠覆国家政权](/articles/cdt/387411.md)
 
 1-6 [凤凰WEEKLY | 抗疫医生艾芬：为了赚钱，他们摘除了我近乎正常的器官](/articles/cdt/387412.md)
-
-1-6 [南方周末 | “人脸识别第一案”郭兵：我没有“胜诉”，我还在维权](/articles/cdt/387416.md)
 
