--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-5 [核酸证明被滥用   中国急令限制核检次数](/articles/rfa/1046483.md)
+
+2-5 [疫苗争夺战传喜讯  台湾从世卫获首批疫苗](/articles/rfa/1046484.md)
+
 2-5 [台美半导体供应链会议 倡议加入经济合作组织](/articles/rfa/1046485.md)
 
 2-5 [国安教育由娃娃抓起 全港中、小学设立国安监察小组](/articles/rfa/1046486.md)
@@ -596,8 +600,4 @@
 1-6 [德国未来对中政策或转趋强硬？](/articles/rfa/1046781.md)
 
 1-6 [赖小民判死 邓恢林双开   中共"老虎“打不完](/articles/rfa/1046782.md)
-
-1-6 [济南拟立新规    遗弃狗将被罚两千](/articles/rfa/1046783.md)
-
-1-6 [专访香港“连侬画家”奥托：用手绘画支援香港抗争](/articles/rfa/1046784.md)
 
