--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-6 [昂山素季主要助手被捕，缅甸抵制政变力量势头加强](/articles/voa/1043164.md)
+
 2-6 [布隆伯格重返联合国担任气候行动特使](/articles/voa/1043165.md)
 
 2-5 [香港教育局公布课程安排 国安教育从娃娃抓起](/articles/voa/1043166.md)
@@ -598,6 +600,4 @@
 1-26 [如何应对华为、抖音和微信带来的风险？拜登政府称不会是零打碎敲](/articles/voa/1043462.md)
 
 1-26 [美众议院向参议院递交弹劾条款](/articles/voa/1043463.md)
-
-1-26 [三星电子副会长李在镕入狱 韩国政商关系面临大转型](/articles/voa/1043464.md)
 
