--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-6 [巴西淡水河谷矿业溃坝受害者表不满](/articles/rfi/1035212.md)
+
 2-6 [美股开涨 再创新高 – 法国国际广播电台 - RFI](/articles/rfi/1035213.md)
 
 2-6 [法国纯素餐厅首摘米其林一星 - 法国美食](/articles/rfi/1035214.md)
@@ -598,6 +600,4 @@
 2-1 [新冠疫情：佩戴口罩和远程办公对美容行业造成严重打击](/articles/rfi/1035510.md)
 
 2-1 [封城措施在法中两国效应各异 - 法国报纸摘要](/articles/rfi/1035511.md)
-
-2-1 [将在同期举行的戛纳影节和阿维尼翁艺术节展开文化大战 - 法国文艺欣赏](/articles/rfi/1035512.md)
 
