--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+2-6 [美国加州多族裔示威 要求抵制北京冬奥会](/articles/rfa/1046478.md)
+
+2-6 [全球关注郭飞雄下落  病妻张青向联合国求助](/articles/rfa/1046479.md)
+
 2-6 [拜登主政下孟晚舟案能否解套？专家：问题出在中国](/articles/rfa/1046480.md)
 
 2-6 [马克龙批评中国疫苗资讯不明    欧盟要求遵循检验规则](/articles/rfa/1046481.md)
@@ -596,8 +600,4 @@
 1-6 [中国武肺疫苗副作用73种  大陆专家形容“世界上最不安全”](/articles/rfa/1046776.md)
 
 1-6 [香港大抓捕 台湾陆委会批东方之珠成“东方炼狱”](/articles/rfa/1046777.md)
-
-1-6 [港民调多项指标创新低   四成人给特首零分](/articles/rfa/1046778.md)
-
-1-6 [年轻人“拿命换钱”是无奈  企业“拿钱买命”是非法](/articles/rfa/1046779.md)
 
