--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-6 [拜登修复美国外交(三) 中东人道危机与伊朗](/articles/rfi/1035209.md)
+
+2-6 [拜登修复美国外交(二) 恢复缅甸民主  应对中国强势](/articles/rfi/1035210.md)
+
+2-6 [拜登修复美国外交 (一) 美国回来了](/articles/rfi/1035211.md)
+
 2-6 [巴西淡水河谷矿业溃坝受害者表不满](/articles/rfi/1035212.md)
 
 2-6 [美股开涨 再创新高 – 法国国际广播电台 - RFI](/articles/rfi/1035213.md)
@@ -594,10 +600,4 @@
 2-1 [缅甸军方政变 各国政府怎么回应 – 法国国际广播电台 - RFI](/articles/rfi/1035507.md)
 
 2-1 [缅甸军队发动政变 果敢人怎么看？ - 要闻解说](/articles/rfi/1035508.md)
-
-2-1 [《观点》周刊：中国在台湾附近水域发起抽砂之战 - 今日经济](/articles/rfi/1035509.md)
-
-2-1 [新冠疫情：佩戴口罩和远程办公对美容行业造成严重打击](/articles/rfi/1035510.md)
-
-2-1 [封城措施在法中两国效应各异 - 法国报纸摘要](/articles/rfi/1035511.md)
 
