--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-6 [副总统贺锦丽投下关键一票，美国会参议院通过1.9万亿美元经济纾困案](/articles/rfi/1035207.md)
+
+2-6 [世卫专家: 武汉病毒溯源两周与石正丽等讨论 但疑问多于答案](/articles/rfi/1035208.md)
+
 2-6 [拜登修复美国外交(三) 中东人道危机与伊朗](/articles/rfi/1035209.md)
 
 2-6 [拜登修复美国外交(二) 恢复缅甸民主  应对中国强势](/articles/rfi/1035210.md)
@@ -596,8 +600,4 @@
 2-1 [全球疫情逾1亿287万例确诊 超过222万人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1035505.md)
 
 2-1 [染疫康复仍受后遗症折磨  世卫将研商解决之道 – 法国国际广播电台 - RFI](/articles/rfi/1035506.md)
-
-2-1 [缅甸军方政变 各国政府怎么回应 – 法国国际广播电台 - RFI](/articles/rfi/1035507.md)
-
-2-1 [缅甸军队发动政变 果敢人怎么看？ - 要闻解说](/articles/rfi/1035508.md)
 
