--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+2-6 [塞内加尔卡萨芒斯 一场无声的战争](/articles/rfi/1035194.md)
+
+2-6 [拜登对华政策：“但是”句式和“竞争者”定位 - 要闻分析](/articles/rfi/1035195.md)
+
+2-6 [乐观期待美国振兴经济措施 美股涨 – 法国国际广播电台 - RFI](/articles/rfi/1035196.md)
+
+2-6 [赛扬奖强投鲍尔与道奇签约 改写MLB薪资纪录 – 法国国际广播电台 - RFI](/articles/rfi/1035197.md)
+
+2-6 [人民因疫情面临极限 拜登：须快速行动推动纾困案 – 法国国际广播电台 - RFI](/articles/rfi/1035198.md)
+
+2-6 [缅甸政变后 网路追踪组织：推特服务遭受限制 – 法国国际广播电台 - RFI](/articles/rfi/1035199.md)
+
 2-6 [德国强烈抗议俄方驱逐其外交官](/articles/rfi/1035200.md)
 
 2-6 [外交部发言人：中国疫苗是有效和安全的](/articles/rfi/1035201.md)
@@ -588,16 +600,4 @@
 2-2 [促以色列与阿拉伯多国建交：库什纳和助手被提名诺贝尔和平奖](/articles/rfi/1035492.md)
 
 2-2 [特朗普后，拜登政府有非洲政策野心吗？](/articles/rfi/1035493.md)
-
-2-2 [翁山苏姬被捕 洛兴雅难民额手称庆 – 法国国际广播电台 - RFI](/articles/rfi/1035494.md)
-
-2-2 [全球经济受疫情重创 而科技五霸大赚特赚](/articles/rfi/1035495.md)
-
-2-2 [黎智英保释案质疑北京香港国安法](/articles/rfi/1035496.md)
-
-2-1 [中国吁缅甸各方在法律范围内解决分歧](/articles/rfi/1035497.md)
-
-2-1 [台专家：中国海警法违背联合国宪章与联合国海洋法](/articles/rfi/1035498.md)
-
-2-1 [与以色列建交 科索沃将在耶路撒冷设大使馆 – 法国国际广播电台 - RFI](/articles/rfi/1035499.md)
 
