--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-6 [马克龙对中国新冠疫苗的信息透明度发出警告](/articles/voa/1043154.md)
+
 2-6 [被军方推翻的缅甸政界人士抗拒政变](/articles/voa/1043155.md)
 
 2-6 [美国就业数字仅略有增长 失业率回落](/articles/voa/1043156.md)
@@ -598,6 +600,4 @@
 1-27 [中国前央行官员主张永久取消GDP目标](/articles/voa/1043452.md)
 
 1-27 [中国甩锅新冠病毒源头余兴未尽 又攻击西方新冠疫苗](/articles/voa/1043453.md)
-
-1-27 [资深外交官、华盛顿圈内人、吉他手：认识新任国务卿布林肯](/articles/voa/1043454.md)
 
