--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-6 [鲁比奥参议员谴责中共在香港实施教育改革](/articles/voa/1043148.md)
+
+2-6 [获美支持后 前尼日利亚财长有望成为世贸组织首位女性领导人](/articles/voa/1043149.md)
+
 2-6 [台湾在圭亚那设处生变 ，美中竞逐拉美影响力见胜负？](/articles/voa/1043150.md)
 
 2-6 [州众院表决通过后 弗吉尼亚废除死刑几成定局](/articles/voa/1043151.md)
@@ -596,8 +600,4 @@
 1-27 [拜登政府在联合国支持以色列和巴勒斯坦人两国方案](/articles/voa/1043446.md)
 
 1-27 [布林肯提名获参院确认 成美国新任国务卿](/articles/voa/1043447.md)
-
-1-27 [MSCI计划把五家中国公司剔除出其相关指数](/articles/voa/1043448.md)
-
-1-27 [德国总理批评中国疫情处理不透明](/articles/voa/1043449.md)
 
