--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-6 [国务卿布林肯就新疆、香港和缅甸等问题对北京施压](/articles/voa/1043146.md)
+
+2-6 [美司令警告与中俄的“可能”核冲突，呼吁构建新威慑战略](/articles/voa/1043147.md)
+
 2-6 [鲁比奥参议员谴责中共在香港实施教育改革](/articles/voa/1043148.md)
 
 2-6 [获美支持后 前尼日利亚财长有望成为世贸组织首位女性领导人](/articles/voa/1043149.md)
@@ -596,8 +600,4 @@
 1-27 [VOA连线(张蓉湘): 布林肯正式成为美国第71任国务卿](/articles/voa/1043444.md)
 
 1-27 [拜登与普京首次电话交谈](/articles/voa/1043445.md)
-
-1-27 [拜登政府在联合国支持以色列和巴勒斯坦人两国方案](/articles/voa/1043446.md)
-
-1-27 [布林肯提名获参院确认 成美国新任国务卿](/articles/voa/1043447.md)
 
