--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-6 [【图说天朝】如何在十个字以内描述出非常危险的场景？](/articles/cdt/386175.md)
+
 2-6 [资浅记者 | 纪念李文亮医生去世一周年](/articles/cdt/386178.md)
 
 2-5 [端传媒｜无人机卖给了新疆武警，一家德国公司的责任边界](/articles/cdt/386187.md)
@@ -598,6 +600,4 @@
 1-6 [联合早报｜世卫专家赴中国调查新冠源头遇阻 谭德塞表示非常失望](/articles/cdt/387402.md)
 
 1-6 [红星新闻｜饿了么43岁外卖员送餐时猝死  平台支付2000元人道主义费用](/articles/cdt/387407.md)
-
-1-6 [娜塔莎 | 对拼多多事件的一点看法](/articles/cdt/387409.md)
 
