--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 2-6 [资浅记者 | 纪念李文亮医生去世一周年](/articles/cdt/386178.md)
 
+2-6 [【中国哭墙】一年了，不要也不能遗忘。（2月1-6日，2021年）](/articles/cdt/386181.md)
+
 2-5 [端传媒｜无人机卖给了新疆武警，一家德国公司的责任边界](/articles/cdt/386187.md)
 
 2-5 [【网络民议】BBC新疆性侵报道引发全球关注，中国网民晦涩地讨论新疆](/articles/cdt/386196.md)
@@ -598,6 +600,4 @@
 1-6 [【立此存照】“只有灾难发生在自己身上才知道疼”](/articles/cdt/387400.md)
 
 1-6 [联合早报｜世卫专家赴中国调查新冠源头遇阻 谭德塞表示非常失望](/articles/cdt/387402.md)
-
-1-6 [红星新闻｜饿了么43岁外卖员送餐时猝死  平台支付2000元人道主义费用](/articles/cdt/387407.md)
 
