--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,12 @@
 中国数字时代
 ------
 
+2-6 [端传媒 | 四问香港电话卡实名制（节选）](/articles/cdt/386158.md)
+
+2-6 [德国之声 | 香港推行国安教育 小学生要懂“四宗罪”](/articles/cdt/386162.md)
+
+2-6 [中国新闻周刊 | 人人影视消失了，意味着什么？](/articles/cdt/386163.md)
+
 2-6 [【图说天朝】如何在十个字以内描述出非常危险的场景？](/articles/cdt/386175.md)
 
 2-6 [资浅记者 | 纪念李文亮医生去世一周年](/articles/cdt/386178.md)
@@ -594,10 +600,4 @@
 1-7 [【404重点】周泽：我的致谢](/articles/cdt/387385.md)
 
 1-6 [三明治｜36岁，我在大厂996，和先生养育“互联网孤儿”](/articles/cdt/387387.md)
-
-1-6 [人间思想笔记｜聊拼多多员工猝死，工业党大V翻车了](/articles/cdt/387388.md)
-
-1-6 [【立此存照】“只有灾难发生在自己身上才知道疼”](/articles/cdt/387400.md)
-
-1-6 [联合早报｜世卫专家赴中国调查新冠源头遇阻 谭德塞表示非常失望](/articles/cdt/387402.md)
 
