--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,20 @@
 法广
 ------
 
+2-6 [监管疑虑暂抛脑后 阿里巴巴50亿美元债券引发抢购](/articles/rfi/1035175.md)
+
+2-6 [美国对欧洲的贸易战可能不打了？](/articles/rfi/1035176.md)
+
+2-6 [湖南菜市场传摊贩现场杀活猫](/articles/rfi/1035177.md)
+
+2-6 [中国海警船在实施《海警法》后首次进入钓鱼岛](/articles/rfi/1035178.md)
+
+2-6 [德法两国领袖喊话 声援欧盟COVID-19疫苗策略 – 法国国际广播电台 - RFI](/articles/rfi/1035179.md)
+
+2-6 [暴龙123比117力克篮网 杜兰特因防疫规定被迫提早退场 – 法国国际广播电台 - RFI](/articles/rfi/1035180.md)
+
+2-6 [缅甸3千人涌向街头示威 军政府扩大切断国内网路 – 法国国际广播电台 - RFI](/articles/rfi/1035181.md)
+
 2-6 [世卫溯源调查之际 中国再定调疫情多国多点爆发](/articles/rfi/1035182.md)
 
 2-6 [台圭协议一天破局与美台官方太高调有关](/articles/rfi/1035183.md)
@@ -586,18 +600,4 @@
 2-2 [拚太空旅游 维珍银河本月再推试飞 – 法国国际广播电台 - RFI](/articles/rfi/1035473.md)
 
 2-2 [伊雯瑞秋伍德指控性虐 玛丽莲曼森被唱片公司解约 – 法国国际广播电台 - RFI](/articles/rfi/1035474.md)
-
-2-2 [伊雯瑞秋伍德不再沉默 指控玛丽莲曼森性虐 – 法国国际广播电台 - RFI](/articles/rfi/1035475.md)
-
-2-2 [缅甸突发政变考验拜登支持民主宣言及政策可靠性 - 要闻分析](/articles/rfi/1035476.md)
-
-2-2 [拜登呼吁国际社会团结一致，迫使缅甸军方立即放弃权力](/articles/rfi/1035477.md)
-
-2-2 [世卫官员呼吁让国际专家在武汉&quot;自由访问&quot;](/articles/rfi/1035478.md)
-
-2-2 [安理会将召开紧急会议讨论缅甸局势 缅甸军方大规模改组政府](/articles/rfi/1035479.md)
-
-2-2 [对抗中国5G 美国主导五眼联盟与日本合作](/articles/rfi/1035480.md)
-
-2-2 [新冠疫苗接种：马克龙要求欧洲人“有更高的效率”](/articles/rfi/1035481.md)
 
