--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+2-6 [布林肯与英、法、 德国外交部长讨论重振伊朗核协议](/articles/rfi/1035170.md)
+
+2-6 [澳网热身赛：蒙奎露萨晋决赛 将战现球后巴蒂 – 法国国际广播电台 - RFI](/articles/rfi/1035171.md)
+
+2-6 [俄国驱逐欧洲外交官 梅克尔谴责无正当理由 – 法国国际广播电台 - RFI](/articles/rfi/1035172.md)
+
+2-6 [受疫情影响  美国去年贸易赤字创2008年来新高 – 法国国际广播电台 - RFI](/articles/rfi/1035173.md)
+
+2-6 [福斯新闻停播鲁道柏节目 川普声明力挺 – 法国国际广播电台 - RFI](/articles/rfi/1035174.md)
+
 2-6 [监管疑虑暂抛脑后 阿里巴巴50亿美元债券引发抢购](/articles/rfi/1035175.md)
 
 2-6 [美国对欧洲的贸易战可能不打了？](/articles/rfi/1035176.md)
@@ -590,14 +600,4 @@
 2-2 [研究：加护病房染疫患者死亡率降 改善状况趋于停滞 – 法国国际广播电台 - RFI](/articles/rfi/1035468.md)
 
 2-2 [跟随美股上扬 日股收盘上涨 – 法国国际广播电台 - RFI](/articles/rfi/1035469.md)
-
-2-2 [葡萄牙疫情急转严峻 德国送医护人员设备驰援 – 法国国际广播电台 - RFI](/articles/rfi/1035470.md)
-
-2-2 [欧洲各国疫苗接种状况 欧盟疾管单位推工具追踪 – 法国国际广播电台 - RFI](/articles/rfi/1035471.md)
-
-2-2 [疫情封锁无法就医 民主刚果13白化症患者死于皮肤癌 – 法国国际广播电台 - RFI](/articles/rfi/1035472.md)
-
-2-2 [拚太空旅游 维珍银河本月再推试飞 – 法国国际广播电台 - RFI](/articles/rfi/1035473.md)
-
-2-2 [伊雯瑞秋伍德指控性虐 玛丽莲曼森被唱片公司解约 – 法国国际广播电台 - RFI](/articles/rfi/1035474.md)
 
