--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-6 [新冠疫苗接种了——然后呢？](/articles/dw/1044045.md)
+
 2-6 [缅甸爆发大规模反军政府示威](/articles/dw/1044046.md)
 
 2-6 [民众不满加剧 缅甸祭出断网大招](/articles/dw/1044047.md)
@@ -598,6 +600,4 @@
 1-20 [特朗普离开华盛顿：我们会回来](/articles/dw/1044343.md)
 
 1-20 [民调：特朗普在共和党选民中仍有多数支持](/articles/dw/1044344.md)
-
-1-20 [中国新型磁浮列车 追求低成本](/articles/dw/1044345.md)
 
