--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-6 [雪夜访｜悼念最早迎战新冠病毒而殉职者之一刘徳炎医生](/articles/cdt/386144.md)
+
 2-6 [莫狄骁的山房 | 纪念一位普通人](/articles/cdt/386145.md)
 
 2-6 [端传媒 | 四问香港电话卡实名制（节选）](/articles/cdt/386158.md)
@@ -598,6 +600,4 @@
 1-7 [南方周末：拼多多女孩“润肺”之死](/articles/cdt/387380.md)
 
 1-7 [安徽吕先三 | 我为周泽律师公开作证！](/articles/cdt/387381.md)
-
-1-7 [思聪的南方纪事 | 邓飞诉邹思聪何谦案，一审判决书在这里了](/articles/cdt/387382.md)
 
