--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-6 [分析人士：北京连环重压 香港从“一国两制”走向“全面管治”](/articles/voa/1043143.md)
+
 2-6 [报告：亲中视频宣传网络利用冲击国会事件唱衰美国](/articles/voa/1043144.md)
 
 2-6 [英国悄然驱逐3名记者身份中国间谍](/articles/voa/1043145.md)
@@ -598,6 +600,4 @@
 1-27 [美国新任防长面临多重挑战](/articles/voa/1043441.md)
 
 1-27 [VOA连线(文灏): 美国开始要求国际旅客出示核酸检测证明](/articles/voa/1043442.md)
-
-1-27 [白宫要义: 拜登行政命令协助非裔、拉丁裔、亚太裔、印第安人对抗种族歧视与疫情](/articles/voa/1043443.md)
 
