--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+2-6 [布林肯与杨洁篪通话 就人权议题对华施压](/articles/dw/1044041.md)
+
+2-6 [德总统希望四月份举行新冠死者悼念活动](/articles/dw/1044042.md)
+
+2-6 [台湾“罢捷案”未通过 学者担心政治闹剧](/articles/dw/1044043.md)
+
 2-6 [为难民发声 叙利亚人参选联邦议院议员](/articles/dw/1044044.md)
 
 2-6 [新冠疫苗接种了——然后呢？](/articles/dw/1044045.md)
@@ -594,10 +600,4 @@
 1-21 [美国历史上的新一天](/articles/dw/1044339.md)
 
 1-21 [拜登宣誓就任总统 各国有何期待？](/articles/dw/1044340.md)
-
-1-21 [拜登宣誓就任总统 特朗普时代宣告结束](/articles/dw/1044341.md)
-
-1-21 [拜登就职当天 各国领导人这么说](/articles/dw/1044342.md)
-
-1-20 [特朗普离开华盛顿：我们会回来](/articles/dw/1044343.md)
 
