--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-7 [昔日政坛明星北京原副市长受贿近1.3亿在南京遭判15年](/articles/rfi/1035157.md)
+
 2-6 [BBC：缅甸政变首传外国人被捕 翁山苏姬顾问遭软禁 – 法国国际广播电台 - RFI](/articles/rfi/1035158.md)
 
 2-6 [拜登承诺与非洲发展伙伴关系 期盼共同对抗疫情 – 法国国际广播电台 - RFI](/articles/rfi/1035159.md)
@@ -598,6 +600,4 @@
 2-2 [核协议 : 伊朗提议欧盟斡旋](/articles/rfi/1035455.md)
 
 2-2 [澳洲伯斯郊区爆发野火居民急撤 至少30住家被毁 – 法国国际广播电台 - RFI](/articles/rfi/1035456.md)
-
-2-2 [美国警察胡椒喷雾对付9岁女童 引发众怒 – 法国国际广播电台 - RFI](/articles/rfi/1035457.md)
 
