--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+2-7 [香港支联会农历年宵摊位首次被终止合约 被批国安法下人权自由倒退](/articles/voa/1043139.md)
+
+2-7 [时事大家谈：美国纾困方案为民众带来哪些帮助？](/articles/voa/1043140.md)
+
+2-7 [仰光发生大规模抗议示威 缅甸军方切断网络](/articles/voa/1043141.md)
+
 2-6 [中国官媒隐去布杨通话要点--北京破坏印太稳定必被追究](/articles/voa/1043142.md)
 
 2-6 [分析人士：北京连环重压 香港从“一国两制”走向“全面管治”](/articles/voa/1043143.md)
@@ -594,10 +600,4 @@
 1-27 [哈里斯创造历史 成为首位非裔和印度裔副总统](/articles/voa/1043437.md)
 
 1-27 [人权问题发酵 中欧协议前景存疑](/articles/voa/1043438.md)
-
-1-27 [习近平称反对恃强凌弱，台驻美代表萧美琴：我会引用他这句话](/articles/voa/1043439.md)
-
-1-27 [冲击国会事件引发对美国警队内部极端主义的关注](/articles/voa/1043440.md)
-
-1-27 [美国新任防长面临多重挑战](/articles/voa/1043441.md)
 
