--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+2-7 [李文亮周年日：官方沉默，民众怀念](/articles/voa/1043137.md)
+
+2-7 [时事大家谈：强生、阿斯利康疫苗传喜讯 你要选择哪一种？](/articles/voa/1043138.md)
+
 2-7 [香港支联会农历年宵摊位首次被终止合约 被批国安法下人权自由倒退](/articles/voa/1043139.md)
 
 2-7 [时事大家谈：美国纾困方案为民众带来哪些帮助？](/articles/voa/1043140.md)
@@ -596,8 +600,4 @@
 1-27 [针对特朗普的弹劾审判将继续推进 共和党参议员阻力强大](/articles/voa/1043435.md)
 
 1-27 [想打人耳光到中国去，在美加会坐牢](/articles/voa/1043436.md)
-
-1-27 [哈里斯创造历史 成为首位非裔和印度裔副总统](/articles/voa/1043437.md)
-
-1-27 [人权问题发酵 中欧协议前景存疑](/articles/voa/1043438.md)
 
