--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-7 [北京2022冬奥会 中国愿履行举办承诺](/articles/rfi/1035156.md)
+
 2-7 [昔日政坛明星北京原副市长受贿近1.3亿在南京遭判15年](/articles/rfi/1035157.md)
 
 2-6 [BBC：缅甸政变首传外国人被捕 翁山苏姬顾问遭软禁 – 法国国际广播电台 - RFI](/articles/rfi/1035158.md)
@@ -598,6 +600,4 @@
 2-2 [中国启动全球最大的碳市场 - 法国报纸摘要](/articles/rfi/1035454.md)
 
 2-2 [核协议 : 伊朗提议欧盟斡旋](/articles/rfi/1035455.md)
-
-2-2 [澳洲伯斯郊区爆发野火居民急撤 至少30住家被毁 – 法国国际广播电台 - RFI](/articles/rfi/1035456.md)
 
