--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-7 [美印两军将举行联合训练演习](/articles/voa/1043134.md)
+
 2-7 [伊朗：制裁若不放松，核协议将更加危险](/articles/voa/1043135.md)
 
 2-7 [缅甸军方开始逮捕外籍人员](/articles/voa/1043136.md)
@@ -598,6 +600,4 @@
 1-27 [拜登政府执政一周已聚焦对华政策 中国驻美大使：要听其言、观其行](/articles/voa/1043432.md)
 
 1-27 [孟晚舟在加拿大的逍遥与“两名麦克”在中国的煎熬](/articles/voa/1043433.md)
-
-1-27 [拜登总统应对新冠疫情计划的看点有哪些？](/articles/voa/1043434.md)
 
