--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+2-7 [【旧文重温】回忆在危机四伏的南疆](/articles/cdt/386130.md)
+
+2-7 [【网络民议】李文亮墓碑的具体位置](/articles/cdt/386134.md)
+
 2-7 [Matters | 面对新疆危机，一个 2020 年的普通人可以做些什么？](/articles/cdt/386136.md)
 
 2-6 [法广｜李文亮去世一周年 中国网络仍悲祭](/articles/cdt/386140.md)
@@ -596,8 +600,4 @@
 1-15 [【CDT档案】寻找病毒起源: 世卫组织调查被中共左右？](/articles/cdt/387357.md)
 
 1-8 [【中国哭墙】疫情又反复了，我想过一个团圆的年（1月1-8日，2021年）](/articles/cdt/387358.md)
-
-1-7 [案件现场｜周泽：感谢你们为我申辩](/articles/cdt/387364.md)
-
-1-7 [德国之声｜内部人士：阿里巴巴/腾讯或将被列入美国黑名单](/articles/cdt/387365.md)
 
