--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-7 [直接和美国人民对话 拜登与加州失业妇女通电话 – 法国国际广播电台 - RFI](/articles/rfi/1035143.md)
+
 2-7 [非盟34届峰会开幕 马哈马特赢得连任](/articles/rfi/1035144.md)
 
 2-7 [布林肯与杨洁篪首度通话 - 要闻解说](/articles/rfi/1035145.md)
@@ -598,6 +600,4 @@
 2-2 [投资人回笼  亚股连收高 – 法国国际广播电台 - RFI](/articles/rfi/1035441.md)
 
 2-2 [缅军接管政府 中媒称「大规模改组」不提政变 – 法国国际广播电台 - RFI](/articles/rfi/1035442.md)
-
-2-2 [拜登政府推迟实施特朗普对中国军企投资禁令](/articles/rfi/1035443.md)
 
