--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-7 [国际刑事法院裁定其对巴勒斯坦被占领土有管辖权](/articles/ft/1046100.md)
+
 2-7 [美国大选：和平交权，宪法凯旋](/articles/ft/1046101.md)
 
 2-7 [K型增长与O型投资](/articles/ft/1046102.md)
@@ -598,6 +600,4 @@
 12-31 [美国因飞机补贴纠纷对欧盟产品提高关税](/articles/ft/1046398.md)
 
 12-31 [英欧贸易协定后的英国怎么走？](/articles/ft/1046399.md)
-
-12-31 [特朗普政府承认新冠疫苗接种人数未达预期](/articles/ft/1046400.md)
 
