--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-7 [“他们正把羊群引向屠宰场”](/articles/ft/1046099.md)
+
 2-7 [国际刑事法院裁定其对巴勒斯坦被占领土有管辖权](/articles/ft/1046100.md)
 
 2-7 [美国大选：和平交权，宪法凯旋](/articles/ft/1046101.md)
@@ -598,6 +600,4 @@
 12-31 [中国批准首款国产新冠疫苗上市](/articles/ft/1046397.md)
 
 12-31 [美国因飞机补贴纠纷对欧盟产品提高关税](/articles/ft/1046398.md)
-
-12-31 [英欧贸易协定后的英国怎么走？](/articles/ft/1046399.md)
 
