--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-7 [兵工厂脚软输艾斯顿维拉 英超苦吞3连败 – 法国国际广播电台 - RFI](/articles/rfi/1035140.md)
+
+2-7 [多特意外输弗莱堡 争欧冠门票再受挫 – 法国国际广播电台 - RFI](/articles/rfi/1035141.md)
+
+2-7 [连体婴状况堪虑 联合国帮忙送出战乱叶门 – 法国国际广播电台 - RFI](/articles/rfi/1035142.md)
+
 2-7 [直接和美国人民对话 拜登与加州失业妇女通电话 – 法国国际广播电台 - RFI](/articles/rfi/1035143.md)
 
 2-7 [非盟34届峰会开幕 马哈马特赢得连任](/articles/rfi/1035144.md)
@@ -594,10 +600,4 @@
 2-2 [任全牛：吊证系列可能是又一波整肃律师队伍的迹象 - 要闻解说](/articles/rfi/1035438.md)
 
 2-2 [俄罗斯反对派纳瓦尔尼出庭 面临3年半监禁 庭外百人被捕](/articles/rfi/1035439.md)
-
-2-2 [西门子能源2025年前将裁员7800人 – 法国国际广播电台 - RFI](/articles/rfi/1035440.md)
-
-2-2 [投资人回笼  亚股连收高 – 法国国际广播电台 - RFI](/articles/rfi/1035441.md)
-
-2-2 [缅军接管政府 中媒称「大规模改组」不提政变 – 法国国际广播电台 - RFI](/articles/rfi/1035442.md)
 
