--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+2-7 [NFL提议提供场馆　作为疫苗施打中心 – 法国国际广播电台 - RFI](/articles/rfi/1035133.md)
+
+2-7 [拜登展开行动　提倡海外LGBTIQ权利 – 法国国际广播电台 - RFI](/articles/rfi/1035134.md)
+
+2-7 [好心陌生人牵线 美老兵找回遗失53年皮夹 – 法国国际广播电台 - RFI](/articles/rfi/1035135.md)
+
+2-7 [美老兵皮夹遗失53年 失而复得 – 法国国际广播电台 - RFI](/articles/rfi/1035136.md)
+
+2-7 [规模6地震袭菲律宾民答那峨 – 法国国际广播电台 - RFI](/articles/rfi/1035137.md)
+
 2-7 [里昂大破史特拉斯堡 重登法甲龙头 – 法国国际广播电台 - RFI](/articles/rfi/1035138.md)
 
 2-7 [门兴在家大意输科隆 便宜对方远离降级区 – 法国国际广播电台 - RFI](/articles/rfi/1035139.md)
@@ -590,14 +600,4 @@
 2-3 [【视频】缅甸军事政变翌日：首都仰光戒备森严](/articles/rfi/1035431.md)
 
 2-3 [马斯克：植入芯片猴子会玩电子游戏](/articles/rfi/1035432.md)
-
-2-3 [【视频】英国向百万持BNO护照港人实施新的更优惠签证移民政策](/articles/rfi/1035433.md)
-
-2-3 [缅甸政变隔天 军方将领仍牢牢掌控情势 – 法国国际广播电台 - RFI](/articles/rfi/1035434.md)
-
-2-2 [耿潇男案农历春节前开庭 当局施压解聘律师尚宝军](/articles/rfi/1035435.md)
-
-2-2 [俄国异议领袖是否面临数年徒刑 莫斯拜法院展开听审 – 法国国际广播电台 - RFI](/articles/rfi/1035436.md)
-
-2-2 [刺胳针：俄罗斯卫星-V疫苗效力达91.6% – 法国国际广播电台 - RFI](/articles/rfi/1035437.md)
 
