--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+2-7 [拜登寻地气亲民 与加州失业妇女通电话](/articles/rfi/1035124.md)
+
+2-7 [“精英俱乐部”手机软件：爆红中国及西方](/articles/rfi/1035125.md)
+
+2-7 [授权动武后 中国海警船连2天游弋钓鱼岛 遭指试图接近日本渔船](/articles/rfi/1035126.md)
+
+2-7 [社会主义者对战前银行家：厄瓜多总统大选登场 – 法国国际广播电台 - RFI](/articles/rfi/1035127.md)
+
 2-7 [中国对英国驱逐3名假记者间谍表达不满](/articles/rfi/1035128.md)
 
 2-7 [内蒙古地方政府不顾反对声浪，进一步强化汉语教学改革](/articles/rfi/1035129.md)
@@ -592,12 +600,4 @@
 2-3 [美国媒体称缅甸政变让拜登面临第一场外交挑战](/articles/rfi/1035422.md)
 
 2-3 [世界报：缅甸军队盘踞领导中心的位子  致国家团结幻灭](/articles/rfi/1035423.md)
-
-2-3 [官媒发文称赞中国企业家代表，马云被忽略引关注](/articles/rfi/1035424.md)
-
-2-3 [拜登政府将缅甸事变定性为“政变”，展开对缅援助审查](/articles/rfi/1035425.md)
-
-2-3 [英国百岁老兵为抗击新冠募款染疫去世，女王首相致哀](/articles/rfi/1035426.md)
-
-2-3 [窃取美国医院商业机密，华裔女科学家被判入狱2年半](/articles/rfi/1035427.md)
 
