--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-7 [香港又一名电台主持涉“煽动”罪名被捕](/articles/dw/1044028.md)
+
 2-7 [奥地利有意在本国生产俄、中两国疫苗](/articles/dw/1044029.md)
 
 2-7 [中国向非洲援助疫苗：救命恩人？政治考量？](/articles/dw/1044030.md)
@@ -598,6 +600,4 @@
 1-21 [全球风险报告：新冠疫情可能加重“青年幻灭”](/articles/dw/1044326.md)
 
 1-21 [拜登就职典礼精彩瞬间](/articles/dw/1044327.md)
-
-1-21 [评论：拜登执政正当其时 但仅限此刻](/articles/dw/1044328.md)
 
