--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-7 [疫情与经济困境夹击下厄瓜多尔总统选举开始投票](/articles/rfi/1035116.md)
+
+2-7 [布林肯杨洁篪首度通话 中美两国公布内容不同或各取所需](/articles/rfi/1035117.md)
+
 2-7 [香港网络电台主持人杰斯再遭拘](/articles/rfi/1035118.md)
 
 2-7 [习近平贵州视察特种机登运-8G](/articles/rfi/1035119.md)
@@ -596,8 +600,4 @@
 2-3 [俄罗斯卫星-V疫苗临床试验的保护效力达91.6%](/articles/rfi/1035414.md)
 
 2-3 [爱拉斯莫的生活与思想之四 走向巴黎 - 欧洲思想文化长廊](/articles/rfi/1035415.md)
-
-2-3 [国际货币基金组织呼吁各国在短期支持与债务可控水平之间找到平衡 - 今日经济](/articles/rfi/1035416.md)
-
-2-3 [投资人逢低买进 欧股再度收高 – 法国国际广播电台 - RFI](/articles/rfi/1035417.md)
 
