--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-7 [李文亮去世一周年：“让我们永远不要忘记”](/articles/dw/1044026.md)
+
 2-7 [有邀请函吗？Clubhouse为什么在中国火了？](/articles/dw/1044027.md)
 
 2-7 [香港又一名电台主持涉“煽动”罪名被捕](/articles/dw/1044028.md)
@@ -598,6 +600,4 @@
 1-21 [白宫迎来新主人 北京希望改善关系](/articles/dw/1044324.md)
 
 1-21 [德国疫情：七天指数下降 单日病例仍高](/articles/dw/1044325.md)
-
-1-21 [全球风险报告：新冠疫情可能加重“青年幻灭”](/articles/dw/1044326.md)
 
