--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-7 [拜登或更同情受迫害者，寻求庇护者的好消息](/articles/voa/1043130.md)
+
 2-7 [数万缅甸人参加2007年以来规模最大的抗议示威](/articles/voa/1043131.md)
 
 2-7 [昂山素季治下缅甸对中国经济依赖减轻 军政府面临西方制裁或投向北京](/articles/voa/1043132.md)
@@ -598,6 +600,4 @@
 1-27 [美国的“坏消息”与中国的舆论导向](/articles/voa/1043428.md)
 
 1-27 [中国官员：印度禁用中国手机应用程序违反世贸组织规则](/articles/voa/1043429.md)
-
-1-27 [台政治评论人士：共机频频扰台 美国应有战略准备](/articles/voa/1043430.md)
 
