--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-7 [为许志永呼吁，李翘楚被山东临沂警方带走](/articles/cdt/386122.md)
+
 2-7 [法律园地｜医者李文亮列传：一个健康的社会不应该只有一种声音](/articles/cdt/386128.md)
 
 2-7 [【旧文重温】回忆在危机四伏的南疆](/articles/cdt/386130.md)
@@ -598,6 +600,4 @@
 1-8 [【CDTV】端传媒 | 为自由付上的](/articles/cdt/387342.md)
 
 1-8 [辽沈晚报｜中国版“世界名画” 之“风雪战疫”的背后故事](/articles/cdt/387351.md)
-
-1-8 [基本常识｜要是连花清瘟早点发挥作用，石家庄还会爆发疫情吗？](/articles/cdt/387355.md)
 
