--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-7 [新冠肺炎全球逾1亿575万例确诊 超过231万人病亡 – 法国国际广播电台 - RFI](/articles/rfi/1035111.md)
+
 2-7 [缅甸再爆发大规模示威抗议军事政变](/articles/rfi/1035112.md)
 
 2-7 [国际刑事法院裁定其对巴勒斯坦被占领土有管辖权 拟审2014年加沙战争中战争罪](/articles/rfi/1035113.md)
@@ -598,6 +600,4 @@
 2-3 [威权主义回潮，西方政客继续嘴遁治世必难当大任 - 要闻分析](/articles/rfi/1035409.md)
 
 2-3 [缅甸军事政变：联合国安理会举行紧急闭门会议，寻求团结](/articles/rfi/1035410.md)
-
-2-3 [贝佐斯宣布将于三季度卸任亚马逊CEO职务](/articles/rfi/1035411.md)
 
