--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+2-7 [缅甸：大批民众再次走上街头 谴责政变](/articles/dw/1044023.md)
+
+2-7 [墙外文摘:Clubhouse,两岸三地聊它个三天三夜](/articles/dw/1044024.md)
+
 2-7 [寻求与中国抗衡 印度开打疫苗外交](/articles/dw/1044025.md)
 
 2-7 [李文亮去世一周年：“让我们永远不要忘记”](/articles/dw/1044026.md)
@@ -596,8 +600,4 @@
 1-21 [德语媒体：中国在进行“种族灭绝”吗？](/articles/dw/1044321.md)
 
 1-21 [拜登签17新政令 推翻多项特朗普政策](/articles/dw/1044322.md)
-
-1-21 [分析：自信的中国为拜登带来什么难题？](/articles/dw/1044323.md)
-
-1-21 [白宫迎来新主人 北京希望改善关系](/articles/dw/1044324.md)
 
