--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-8 [【网络民议】无审查，中国网民涌入Clubhouse谈新疆（附立场报道）](/articles/cdt/386113.md)
+
 2-7 [为许志永呼吁，李翘楚被山东临沂警方带走](/articles/cdt/386122.md)
 
 2-7 [【网络民议】支持马金瑜，是基于对所有家庭暴力反对基础上的](/articles/cdt/386127.md)
@@ -598,6 +600,4 @@
 1-8 [【CDTV】魏老爸｜“大头宝宝”卷土重来？儿童抑菌霜竟含激素成分](/articles/cdt/387338.md)
 
 1-8 [美国之音｜中国通林培瑞：美国与香港示威有根本区别](/articles/cdt/387341.md)
-
-1-8 [【CDTV】端传媒 | 为自由付上的](/articles/cdt/387342.md)
 
