--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-7 [丁家喜许志永更多惊人酷刑曝光 李翘楚为许志永呐喊遭拘留](/articles/voa/1043128.md)
+
 2-7 [霍梅尼：重返伊核协议的条件是美国解除对伊制裁](/articles/voa/1043129.md)
 
 2-7 [拜登或更同情受迫害者，寻求庇护者的好消息](/articles/voa/1043130.md)
@@ -598,6 +600,4 @@
 1-27 [25名中国船员涉嫌非法运输石油被扣押，北京要求印尼公正调查](/articles/voa/1043426.md)
 
 1-27 [拜登总统与普京首次通话 同意延长《新削减战略武器条约》](/articles/voa/1043427.md)
-
-1-27 [美国的“坏消息”与中国的舆论导向](/articles/voa/1043428.md)
 
