--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-8 [法国药剂师将加入接种Covid疫苗行动](/articles/rfi/1035100.md)
+
+2-8 [“精英俱乐部”无审查？ 中国网民涌入讨论新疆台独议题](/articles/rfi/1035101.md)
+
 2-7 [缅甸周日大示威 传警方镇压开枪](/articles/rfi/1035102.md)
 
 2-7 [乔科维奇谈澳网像「恋爱」 至今上场仍会紧张 – 法国国际广播电台 - RFI](/articles/rfi/1035103.md)
@@ -596,8 +600,4 @@
 2-3 [SpaceX火箭垂直降落测试失败 爆炸化为火球 – 法国国际广播电台 - RFI](/articles/rfi/1035398.md)
 
 2-3 [弹劾审前摘要：国会之乱川普应负起单一责任 – 法国国际广播电台 - RFI](/articles/rfi/1035399.md)
-
-2-3 [澳洲野火吞71民宅 正烧向封城中的伯斯 – 法国国际广播电台 - RFI](/articles/rfi/1035400.md)
-
-2-3 [仅次欧洲 拉美加勒比地区染疫死亡人数破60万 – 法国国际广播电台 - RFI](/articles/rfi/1035401.md)
 
