--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-8 [果壳 | 家暴受害者离开，不是她突然想通了，是她终于成功了](/articles/cdt/386112.md)
+
 2-8 [【网络民议】无审查，中国网民涌入Clubhouse谈新疆（附立场报道）](/articles/cdt/386113.md)
 
 2-7 [为许志永呼吁，李翘楚被山东临沂警方带走](/articles/cdt/386122.md)
@@ -598,6 +600,4 @@
 1-8 [BBC | 新冠病毒溯源小组无法入境中国，世卫组织罕见公开向北京表达不满](/articles/cdt/387300.md)
 
 1-8 [【CDTV】魏老爸｜“大头宝宝”卷土重来？儿童抑菌霜竟含激素成分](/articles/cdt/387338.md)
-
-1-8 [美国之音｜中国通林培瑞：美国与香港示威有根本区别](/articles/cdt/387341.md)
 
