--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-8 [中国“疫苗外交”被指宣传自我 诋毁他国](/articles/voa/1043126.md)
+
 2-8 [缅甸星期天网络似部分恢复 有抗议者被橡胶子弹射伤](/articles/voa/1043127.md)
 
 2-7 [丁家喜许志永更多惊人酷刑曝光 李翘楚为许志永呐喊遭拘留](/articles/voa/1043128.md)
@@ -598,6 +600,4 @@
 1-28 [从对华温和到强硬，美联合国大使提名人今接受参议院质询](/articles/voa/1043424.md)
 
 1-28 [拜登将宣布应对气候变化新措施](/articles/voa/1043425.md)
-
-1-27 [25名中国船员涉嫌非法运输石油被扣押，北京要求印尼公正调查](/articles/voa/1043426.md)
 
