--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+2-8 [抗疫限制措施的后果：德国少饮5亿升啤酒](/articles/rfi/1035096.md)
+
+2-8 [拜登要为全球的“特殊性别人群”维权？](/articles/rfi/1035097.md)
+
+2-8 [叙利亚充公拍卖出逃境外异议者地产](/articles/rfi/1035098.md)
+
 2-8 [厄瓜多尔总统大选在疫情和经济双重危机背景下展开 - 要闻解说](/articles/rfi/1035099.md)
 
 2-8 [法国药剂师将加入接种Covid疫苗行动](/articles/rfi/1035100.md)
@@ -594,10 +600,4 @@
 2-3 [Google若退出澳洲 微软将补位 – 法国国际广播电台 - RFI](/articles/rfi/1035394.md)
 
 2-3 [日股随美股走高 日经指数收涨逾280点 – 法国国际广播电台 - RFI](/articles/rfi/1035395.md)
-
-2-3 [义大利将请前欧洲央行总裁出马任总理 – 法国国际广播电台 - RFI](/articles/rfi/1035396.md)
-
-2-3 [拚东京奥运金牌 澳洲男篮纳西蒙斯等NBA球星 – 法国国际广播电台 - RFI](/articles/rfi/1035397.md)
-
-2-3 [SpaceX火箭垂直降落测试失败 爆炸化为火球 – 法国国际广播电台 - RFI](/articles/rfi/1035398.md)
 
