--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,20 @@
 法广
 ------
 
+2-8 [无法入境：旅居北美的法国人把政府告上法庭](/articles/rfi/1035089.md)
+
+2-8 [喜马拉雅山冰河崩裂冲击印度水坝 16人获救   200人下落不明](/articles/rfi/1035090.md)
+
+2-8 [中国公司拟斥资近390亿澳元   在巴布亚新几内亚筑城](/articles/rfi/1035091.md)
+
+2-8 [官媒：“就地过年”有惊喜！北京迎来1000万元”数字人民币“红包](/articles/rfi/1035092.md)
+
+2-8 [传中国强迫双重国籍者二选一     加、美、英示警](/articles/rfi/1035093.md)
+
+2-8 [郭飞雄下落不明    病妻张青向联合国求助](/articles/rfi/1035094.md)
+
+2-8 [拜登：与中国是“极端竞争”    但不是冲突](/articles/rfi/1035095.md)
+
 2-8 [抗疫限制措施的后果：德国少饮5亿升啤酒](/articles/rfi/1035096.md)
 
 2-8 [拜登要为全球的“特殊性别人群”维权？](/articles/rfi/1035097.md)
@@ -586,18 +600,4 @@
 2-3 [抖音腾讯闹翻互告 牵动中国反垄断大环境？](/articles/rfi/1035387.md)
 
 2-3 [中国报有10亿网民大军](/articles/rfi/1035388.md)
-
-2-3 [“断崖式降级”：海航评级从AA遭打至BB 此前皆哥俩好？](/articles/rfi/1035389.md)
-
-2-3 [拜登军事行动第一桩？ 尼米兹航母撤离波斯湾](/articles/rfi/1035390.md)
-
-2-3 [在华德企今年有信心说继续投资](/articles/rfi/1035391.md)
-
-2-3 [疫情带动网路成长 亚马逊Google去年底业绩亮丽 – 法国国际广播电台 - RFI](/articles/rfi/1035392.md)
-
-2-3 [马克宏：牛津疫苗数据公布过少 也保护不了老人 – 法国国际广播电台 - RFI](/articles/rfi/1035393.md)
-
-2-3 [Google若退出澳洲 微软将补位 – 法国国际广播电台 - RFI](/articles/rfi/1035394.md)
-
-2-3 [日股随美股走高 日经指数收涨逾280点 – 法国国际广播电台 - RFI](/articles/rfi/1035395.md)
 
