--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+2-8 [拜登称习近平骨子里没民主 丁家喜许志永遭酷刑添新证 - 要闻分析](/articles/rfi/1035088.md)
+
 2-8 [无法入境：旅居北美的法国人把政府告上法庭](/articles/rfi/1035089.md)
 
 2-8 [喜马拉雅山冰河崩裂冲击印度水坝 16人获救   200人下落不明](/articles/rfi/1035090.md)
@@ -598,6 +600,4 @@
 2-3 [两岸三地看领袖 朱镕基第一习近平排第六 竟在蔡英文后](/articles/rfi/1035386.md)
 
 2-3 [抖音腾讯闹翻互告 牵动中国反垄断大环境？](/articles/rfi/1035387.md)
-
-2-3 [中国报有10亿网民大军](/articles/rfi/1035388.md)
 
