--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-8 [耶伦：1.9万亿美元刺激计划将使美国实现充分就业](/articles/ft/1046093.md)
+
 2-8 [为什么是梅尔文资本栽了？](/articles/ft/1046094.md)
 
 2-8 [疫情叠加“春运”，是否会影响经济复苏？](/articles/ft/1046095.md)
@@ -598,6 +600,4 @@
 1-4 [年度词汇：*型复苏](/articles/ft/1046391.md)
 
 1-4 [特朗普要求佐治亚州官员“找到选票”以推翻大选结果](/articles/ft/1046392.md)
-
-1-4 [一周世界舆论聚焦：有利的国际形势与中国的对策](/articles/ft/1046393.md)
 
