--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,9 +1,13 @@
 中国数字时代
 ------
 
+2-8 [【CDT月度人物】润肺和拼多多员工们：“想当人肉干电池吗？”](/articles/cdt/386111.md)
+
 2-8 [果壳 | 家暴受害者离开，不是她突然想通了，是她终于成功了](/articles/cdt/386112.md)
 
 2-8 [【网络民议】无审查，中国网民涌入Clubhouse谈新疆：这是华文公共空间的哈贝马斯时刻（附立场报道）](/articles/cdt/386113.md)
+
+2-8 [【CDT周报】第三期：十年前他们是“网络时代知识布道者”  而如今是“犯罪嫌疑人”](/articles/cdt/386116.md)
 
 2-7 [为许志永呼吁，李翘楚被山东临沂警方带走](/articles/cdt/386122.md)
 
@@ -596,8 +600,4 @@
 1-8 [美国之音 | 海外港人团体发表联合声明谴责港府加码打击异见](/articles/cdt/387288.md)
 
 1-8 [兽爷丨过劳时代](/articles/cdt/387290.md)
-
-1-8 [BBC | 新冠病毒溯源小组无法入境中国，世卫组织罕见公开向北京表达不满](/articles/cdt/387300.md)
-
-1-8 [【CDTV】魏老爸｜“大头宝宝”卷土重来？儿童抑菌霜竟含激素成分](/articles/cdt/387338.md)
 
