--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+2-8 [拜登：不会为让伊朗回到谈判桌而解除制裁](/articles/ft/1046090.md)
+
 2-8 [南非暂停牛津/阿斯利康疫苗接种](/articles/ft/1046091.md)
 
 2-8 [从Clubhouse的火爆看邀请制的魅力](/articles/ft/1046092.md)
@@ -598,6 +600,4 @@
 1-4 [比特币价格突破每枚3.4万美元](/articles/ft/1046388.md)
 
 1-4 [美卫生官员驳斥特朗普所谓新冠死亡病例数“被夸大”的说法](/articles/ft/1046389.md)
-
-1-4 [中国公司在伊拉克中标原油预付交易合同](/articles/ft/1046390.md)
 
