--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-8 [应对“男性气质危机”？中国教育部要求培养学生“阳刚之气”](/articles/nyt/1047198.md)
+
 2-8 [李文亮逝世一周年：“我们不能忘记”](/articles/nyt/1047199.md)
 
 2-8 [疫情一周年，中国留学生的美国梦还在吗](/articles/nyt/1047200.md)
@@ -598,6 +600,4 @@
 12-1 [重温王家卫：寻找浪漫与情感的可能性](/articles/nyt/1047496.md)
 
 12-1 [为何很多亚洲亲民主人士支持特朗普？](/articles/nyt/1047497.md)
-
-12-1 [疫情进一步冲击对华贸易，朝鲜经济困境加深](/articles/nyt/1047498.md)
 
