--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-8 [缅甸反军事政变的大规模示威进入第三天](/articles/voa/1043118.md)
+
 2-8 [参议院评估冲击国会击事件中特朗普的作用](/articles/voa/1043119.md)
 
 2-8 [亲子组合隔离四重奏成全球网红](/articles/voa/1043120.md)
@@ -598,6 +600,4 @@
 1-28 [前中国民运人士办口罩厂 为美国创造就业机会](/articles/voa/1043416.md)
 
 1-28 [军事专家：中国南海军演是对美国的“试水”行动](/articles/voa/1043417.md)
-
-1-28 [时事大家谈: 习近平中纪委撂重话，20大前酝酿政治风暴？](/articles/voa/1043418.md)
 
