--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-8 [澳籍记者成蕾被捕  被控泄漏中国国家机密](/articles/dw/1044020.md)
+
 2-8 [强调与中国「极端竞争」  拜登称习近平「骨子里没民主」](/articles/dw/1044021.md)
 
 2-8 [柬埔寨收60万剂中国疫苗　欧洲促北京公布数据](/articles/dw/1044022.md)
@@ -598,6 +600,4 @@
 1-22 [世界最大疫苗生产商发生火灾](/articles/dw/1044318.md)
 
 1-21 [约翰逊拒称维族遭种族灭绝](/articles/dw/1044319.md)
-
-1-21 [默克尔：不会放弃“北溪2”项目](/articles/dw/1044320.md)
 
