--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+2-8 [中国正式逮捕澳籍记者成蕾，指控其涉嫌泄露国家机密](/articles/nyt/1047197.md)
+
 2-8 [应对“男性气质危机”？中国教育部要求培养学生“阳刚之气”](/articles/nyt/1047198.md)
 
 2-8 [李文亮逝世一周年：“我们不能忘记”](/articles/nyt/1047199.md)
@@ -598,6 +600,4 @@
 12-2 [简报：嫦娥五号在月球着陆；北约研究如何应对中俄挑战](/articles/nyt/1047495.md)
 
 12-1 [重温王家卫：寻找浪漫与情感的可能性](/articles/nyt/1047496.md)
-
-12-1 [为何很多亚洲亲民主人士支持特朗普？](/articles/nyt/1047497.md)
 
