--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+2-8 [印度冰河崩落酿暴洪 至少14死125人失踪 – 法国国际广播电台 - RFI](/articles/rfi/1035074.md)
+
+2-8 [厄瓜多大选 左派总统接班人面临决选 – 法国国际广播电台 - RFI](/articles/rfi/1035075.md)
+
+2-8 [厄瓜多大选 左派总统接班人出口民调领先 – 法国国际广播电台 - RFI](/articles/rfi/1035076.md)
+
+2-8 [火星再添访客 阿联希望号探测器9日登陆 – 法国国际广播电台 - RFI](/articles/rfi/1035077.md)
+
+2-8 [伊布生涯第500个俱乐部进球 A米夺回义甲龙头 – 法国国际广播电台 - RFI](/articles/rfi/1035078.md)
+
 2-8 [叶伦：拜登54兆纾困案加持 美就业市场明年恢复 – 法国国际广播电台 - RFI](/articles/rfi/1035079.md)
 
 2-8 [海盗超级杯退酋长夺冠 布雷迪压马霍姆斯获MVP – 法国国际广播电台 - RFI](/articles/rfi/1035080.md)
@@ -590,14 +600,4 @@
 2-3 [美媒指缅甸军方押注中国 拜登一味谴责但无用](/articles/rfi/1035372.md)
 
 2-3 [香港民主党创始人李柱铭获诺贝尔和平奖提名](/articles/rfi/1035373.md)
-
-2-3 [1个月内连3起  阿富汗法官遭埋伏枪杀 – 法国国际广播电台 - RFI](/articles/rfi/1035374.md)
-
-2-3 [力拚疫苗接种率 美国连锁药妆店也能施打 – 法国国际广播电台 - RFI](/articles/rfi/1035375.md)
-
-2-3 [北京叫停蚂蚁集团公开募股暴露中国体制缺陷 - 法国报纸摘要](/articles/rfi/1035376.md)
-
-2-3 [AIT：美支持以符合台湾人民意愿及最佳利益方式和平解决两岸议题](/articles/rfi/1035377.md)
-
-2-3 [联合国闭门讨论缅甸尚未有共识 美国确认军方行动为政变将予制裁 - 要闻解说](/articles/rfi/1035378.md)
 
