--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+2-8 [美国“散户革命”带来的思考](/articles/ft/1046087.md)
+
+2-8 [一周世界舆论聚焦：从“更长的电报”到拜登的对华政策演说](/articles/ft/1046088.md)
+
 2-8 [Clubhouse是什么——爆红的语音社交平台](/articles/ft/1046089.md)
 
 2-8 [拜登：不会为让伊朗回到谈判桌而解除制裁](/articles/ft/1046090.md)
@@ -596,8 +600,4 @@
 1-4 [现在是否应该投资比特币？](/articles/ft/1046385.md)
 
 1-4 [中欧协定：历史性交易何以达成，影响几何？](/articles/ft/1046386.md)
-
-1-4 [共和党议员计划阻挠认证拜登胜选](/articles/ft/1046387.md)
-
-1-4 [比特币价格突破每枚3.4万美元](/articles/ft/1046388.md)
 
