--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-8 [中国用户大量涌入Clubhouse 安全疑虑仍待解答](/articles/dw/1044019.md)
+
 2-8 [澳籍记者成蕾被捕  被控泄漏中国国家机密](/articles/dw/1044020.md)
 
 2-8 [强调与中国「极端竞争」  拜登称习近平「骨子里没民主」](/articles/dw/1044021.md)
@@ -598,6 +600,4 @@
 1-22 [专家：澳大利亚希望拜登继续保持对中国高压](/articles/dw/1044317.md)
 
 1-22 [世界最大疫苗生产商发生火灾](/articles/dw/1044318.md)
-
-1-21 [约翰逊拒称维族遭种族灭绝](/articles/dw/1044319.md)
 
