--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,26 @@
 法广
 ------
 
+2-8 [香港网台主持疑助台学生筹款被控](/articles/rfi/1035064.md)
+
+2-8 [有钱子弟转校频香港国际学校债券大跌价](/articles/rfi/1035065.md)
+
+2-8 [港确诊数昨轻微回升至27宗无綫见习男编剧中招](/articles/rfi/1035066.md)
+
+2-8 [欧盟执委布莱顿呼吁欧洲制药集团加快疫苗生产](/articles/rfi/1035067.md)
+
+2-8 [缅甸反政变抗议 首都警方出动水炮 – 法国国际广播电台 - RFI](/articles/rfi/1035068.md)
+
+2-8 [澳网男单 瓦林卡闯进第2轮 – 法国国际广播电台 - RFI](/articles/rfi/1035069.md)
+
+2-8 [印度冰河崩落引发暴洪 至少14人罹难170人失踪 – 法国国际广播电台 - RFI](/articles/rfi/1035070.md)
+
+2-8 [美振兴方案和日经济复苏双利多 日股创30年高点 – 法国国际广播电台 - RFI](/articles/rfi/1035071.md)
+
+2-8 [拜登上任为缓解气候危机带来希望 - 环境与发展](/articles/rfi/1035072.md)
+
+2-8 [科西嘉纪念拿破仑去世两百年 - 法国文艺欣赏](/articles/rfi/1035073.md)
+
 2-8 [印度冰河崩落酿暴洪 至少14死125人失踪 – 法国国际广播电台 - RFI](/articles/rfi/1035074.md)
 
 2-8 [厄瓜多大选 左派总统接班人面临决选 – 法国国际广播电台 - RFI](/articles/rfi/1035075.md)
@@ -580,24 +600,4 @@
 2-3 [亚股随美股上扬普遍收涨 – 法国国际广播电台 - RFI](/articles/rfi/1035362.md)
 
 2-3 [索尼前3季净利跃增87%  上修全年财测 – 法国国际广播电台 - RFI](/articles/rfi/1035363.md)
-
-2-3 [中国的假货创造了多少个GDP？ - 今日经济](/articles/rfi/1035364.md)
-
-2-3 [美关注中国10万吨级核航母004暂停研发](/articles/rfi/1035365.md)
-
-2-3 [世卫专家在武汉：问的问题提前发去审核 政治化了一整年 敏感也难怪](/articles/rfi/1035366.md)
-
-2-3 [拜登与习近平仍然无通话 指明争暗斗](/articles/rfi/1035367.md)
-
-2-3 [北京无视家属请求将余文生移交南京监狱](/articles/rfi/1035368.md)
-
-2-3 [美国芯片有禁令 台湾乘机卖最多](/articles/rfi/1035369.md)
-
-2-3 [中国支持默许缅甸军人政变？ 北京今澄清](/articles/rfi/1035370.md)
-
-2-3 [中印边境紧张 拜登明言支持印度](/articles/rfi/1035371.md)
-
-2-3 [美媒指缅甸军方押注中国 拜登一味谴责但无用](/articles/rfi/1035372.md)
-
-2-3 [香港民主党创始人李柱铭获诺贝尔和平奖提名](/articles/rfi/1035373.md)
 
