--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,7 +1,11 @@
 中国数字时代
 ------
 
+2-8 [【立此存照】烈士二区1排21号 有位“不可告人的烈士”](/articles/cdt/386099.md)
+
 2-8 [德国之声｜澳籍记者成蕾被捕 被控泄漏中国国家机密](/articles/cdt/386101.md)
+
+2-8 [全现在｜困守五环外城中村，外卖骑手们用花生米凑一桌年味](/articles/cdt/386102.md)
 
 2-8 [【CDT月度人物】润肺和拼多多员工们：“想当人肉干电池吗？”](/articles/cdt/386111.md)
 
@@ -596,8 +600,4 @@
 1-9 [【CDT敏感词周报】石家庄疫情、国会冲突、香港抓捕、朱令](/articles/cdt/387281.md)
 
 1-9 [自由亚洲 | 六四抗命的38军军长徐勤先去世](/articles/cdt/387283.md)
-
-1-8 [Political理论志  | 县城中学的衰败：1998-2018](/articles/cdt/387287.md)
-
-1-8 [美国之音 | 海外港人团体发表联合声明谴责港府加码打击异见](/articles/cdt/387288.md)
 
