--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+2-8 [博雷利：俄罗斯拒绝对话，欧盟应采取相应措施](/articles/rfi/1035062.md)
+
+2-8 [布伦特原油涨破每桶60美元 创逾一年来新高 – 法国国际广播电台 - RFI](/articles/rfi/1035063.md)
+
 2-8 [香港网台主持疑助台学生筹款被控](/articles/rfi/1035064.md)
 
 2-8 [有钱子弟转校频香港国际学校债券大跌价](/articles/rfi/1035065.md)
@@ -596,8 +600,4 @@
 2-3 [美国航母南海受模拟攻击？美媒称金门或东沙岛如遭攻击或成拜登的“中国噩梦”](/articles/rfi/1035360.md)
 
 2-3 [维权团体吁国际抵制北京冬奥 – 法国国际广播电台 - RFI](/articles/rfi/1035361.md)
-
-2-3 [亚股随美股上扬普遍收涨 – 法国国际广播电台 - RFI](/articles/rfi/1035362.md)
-
-2-3 [索尼前3季净利跃增87%  上修全年财测 – 法国国际广播电台 - RFI](/articles/rfi/1035363.md)
 
