--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+2-8 [中共颁“十禁”布局二十大 专家：习近平未能立威反被打脸](/articles/voa/1043115.md)
+
 2-8 [“非法泄露国家机密” 中国正式逮捕澳籍前中国央视主播成蕾](/articles/voa/1043116.md)
 
 2-8 [菲外长称月底谈判修订美菲《访问部队协议》](/articles/voa/1043117.md)
@@ -598,6 +600,4 @@
 1-28 [拜登与菅义伟通电话 强调美日同盟并尽早安排日相访美](/articles/voa/1043413.md)
 
 1-28 [美国宇航员在国际空间站外进行太空行走](/articles/voa/1043414.md)
-
-1-28 [郭飞雄就赴美行程遇阻致信中共高层 引发国际关注](/articles/voa/1043415.md)
 
