--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+2-8 [世贸组织将首次由一名非洲女性领导](/articles/dw/1044011.md)
+
 2-8 [中国与中东欧 “17+1”峰会遇冷场？](/articles/dw/1044012.md)
 
 2-8 [美国计划重返联合国人权理事会](/articles/dw/1044013.md)
@@ -598,6 +600,4 @@
 1-22 [研究：超越德国 中国再次成为全球贸易顺差冠军](/articles/dw/1044309.md)
 
 1-22 [社交平台Parler状告亚马逊 司法首战失利](/articles/dw/1044310.md)
-
-1-22 [贝多芬第六交响曲三、四、五乐章](/articles/dw/1044311.md)
 
