--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+2-9 [【网络民议】言论自由只存在了一周？ClubHouse在墙国被墙](/articles/cdt/386092.md)
+
 2-8 [【异闻观止】浙江嘉兴首个“劳动者维权异常名录”公布  亮剑“职场碰瓷”](/articles/cdt/386094.md)
 
 2-8 [【立此存照】烈士二区1排21号 有位“不可告人的烈士”](/articles/cdt/386099.md)
@@ -598,6 +600,4 @@
 1-9 [立场新闻 | 网站“香港编年史”无法连接 据报国安处首用国安法封网](/articles/cdt/387271.md)
 
 1-9 [红星新闻 | 放弃年终奖也要走，他们为什么想要“逃离”拼多多？](/articles/cdt/387273.md)
-
-1-9 [【CDT敏感词周报】石家庄疫情、国会冲突、香港抓捕、朱令](/articles/cdt/387281.md)
 
