--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+2-9 [维护国防利益和国家安全  法国宪法委员会批准“反华为法”](/articles/rfa/1046467.md)
+
 2-9 [专访人权人士向莉：让更多人了解中国真实现状](/articles/rfa/1046468.md)
 
 2-9 [台湾罢免接力赛：罢免黄捷失败 又要罢免台独立委](/articles/rfa/1046469.md)
@@ -598,6 +600,4 @@
 1-7 [美再禁八款中国应用  能真正实施吗？](/articles/rfa/1046765.md)
 
 1-7 [美媒曝北京要分享蚂蚁大数据   马云能拒绝吗？](/articles/rfa/1046766.md)
-
-1-7 [香港大抓捕行动引发加拿大政要和香港社区舆论谴责](/articles/rfa/1046767.md)
 
